methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:13: error: not found: value tr
      vuBiscuit=tr
                ^MethodsReturning:18: error: not found: value x
x=haveBaggle() 
^